<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginTop="55dp"
        android:capitalize="none"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtSignUpName"
        android:layout_width="271dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

    <EditText
        android:id="@+id/txtSignUpEmail"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpName" />

    <EditText
        android:id="@+id/txtSignUpPhone"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phonehint"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpEmail" />

    <EditText
        android:id="@+id/txtSignUpPW"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/passhint"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpPhone" />

    <EditText
        android:id="@+id/txtCheckPW"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/repasshint"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpPW" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit_signup"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/btnBackToSignIn"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckPW"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/btnBackToSignIn"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/signin"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckPW"
        app:layout_constraintVertical_bias="0.235" />

</androidx.constraintlayout.widget.ConstraintLayout>